styles/globals.css
/* ... */
.label7,
.label8,
.label9 {
  cursor: pointer;
  top: 380px;
  display: inline-block;
  width: 28px;
  height: 29px;
  flex-shrink: 0;
}
.label8 {
  position: absolute;
  margin: 0 !important;
  left: 203px;
  z-index: 16;
}
.label9 {
  left: 244px;
  z-index: 17;
}
.label10,
.label11,
.label9 {
  cursor: pointer;
  position: absolute;
  margin: 0 !important;
}
.label10 {
  top: 380px;
  left: 283px;
  display: inline-block;
  width: 28px;
  height: 29px;
  flex-shrink: 0;
  z-index: 18;
}
.label11 {
  left: 323px;
  z-index: 19;
}
.label11,
.label12,
.label13 {
  cursor: pointer;
  top: 380px;
  display: inline-block;
  width: 28px;
  height: 29px;
  flex-shrink: 0;
}
.label12 {
  position: absolute;
  margin: 0 !important;
  left: 363px;
  z-index: 20;
}
.label13 {
  left: 402px;
  z-index: 21;
}
.asset-label,
.button-icon,
.label13 {
  position: absolute;
  margin: 0 !important;
}
.collateral-tvl-label,
.highest-tvl-bar-label,
.user-tvl-label,
.captial-ahead-label,
.total-tvl-label,
.premium,
.label4,
.label5,
.label6,
.label7,
.label8,
.label9,
.label10,
.label11,
.label12,
.label13 {  
  color: white;
} 
.button-icon {
  top: 9.5px;
  left: 63.87px;
  width: 11.26px;
  height: 13.5px;
  z-index: 0;
}
.asset-label {
  top: calc(50% - 11.5px);
  left: calc(50% - 31.5px);
  z-index: 1;
}
.asset-dropdown {
  position: absolute;
  top: 30px;
  left: 195px;
  background-color: #798eff;
  width: 75px;
  height: 27px;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  z-index: 22;
  color: white
}
.menu {
  position: absolute;
  /* margin-top: 262%; */
  margin-top: 120%;
  width: 75px;
}
.menu > li:hover {
  background-color: lightgray;
}
.menu > li > button {
  text-align: center;
  color: inherit;
  border: none;
  margin: 0;
  font: inherit;
  cursor: pointer;
}
.menu-item {
  position: relative;
  text-align: center;
  border: 1px solid grey;
  background-color: #798eff;
}
.collateral-tvl-label {
  position: absolute;
  top: 70px;
  left: 163px;
  display: inline-block;
  min-width: 197px;
  height: 21px;
  flex-shrink: 0;
  z-index: 23;
}
.highest-tvl-bar-label {
  position: absolute;
  margin: 0 !important;
  top: 137px;
  left: 162px;
  font-size: 17px;
  z-index: 24;
}
.x-axis {
  position: absolute;
  margin: 0 !important;
  top: 370px;
  left: 23px;
  border-top: 2px;
  background-color: #ffffff;
  width: 425px;
  height: 2px;
  z-index: 25;
}
.singleassetframe {
  position: absolute;
  top: 80px;
  padding-left: 30%;
  background-color: #383838;
  border: 3px solid black;
  width: 487px;
  height: 550px;
  display: flex;
  flex-direction: column;
  padding: var(--padding-5xl) var(--padding-5xl) 1px;
  align-items: flex-start;
  justify-content: flex-start;
  gap: var(--gap-5xl);
  z-index: 30;
}
.captial-ahead-box,
.user-tvl-box {
  position: absolute;
  margin: 0 !important;
  top: 136px;
  left: 183px;
  background-color: rgba(121, 142, 255, 0.85);
  width: 102px;
  height: 236px;
  z-index: 1;
}
.user-tvl-box {
  background-color: rgba(79, 202, 187, 0.85);
  height: 44px;
  z-index: 2;
}
.captial-ahead-label,
.user-tvl-label {
  left: 218px;
  display: inline-block;
  width: 50px;
  height: 11px;
  flex-shrink: 0;
  z-index: 13;
}
.user-tvl-label {
  position: absolute;
  margin: 0 !important;
  top: 151px;
}
.captial-ahead-label {
  position: absolute;
  top: 268px;
  z-index: 12;
}
.x-axis1 {
  position: absolute;
  top: 372px;
  left: 103px;
  box-sizing: border-box;
  width: 255px;
  height: 2px;
  z-index: 5;
}
.total-tvl-label {
  position: absolute;
  top: 70px;
  left: 210px;
  font-size: var(--font-size-xl);
  display: inline-block;
  width: 112px;
  height: 21px;
  flex-shrink: 0;
  z-index: 6;
}
.omni-asset-info-circle {
  top: 28px;
  left: 136px;
  background-color: var(--color-gainsboro-100);
  z-index: 7;
}
.claim-button {
  z-index: 13;
  color: black;
  width: 120px;
  height: 41px;
  margin-top: 89%;
  margin-left: 37%;
  background-color: #D9D9D9;
}
.withdraw-button,
.deposit-button,
.deposit-amount,
.withdraw-amount,
.omni-deposit-amount,
.omni-withdraw-amount,
.withdraw-button-omni,
.deposit-button-omni {
  position: absolute;
  z-index: 20;
  color: black;
  width: 111px;
  height: 38px;
  margin-top: 70%;
  background-color: #4FCABB;
}
.deposit-button {
  left: 45px;
}
.withdraw-button {
  left: -15px;
}
.deposit-amount,
.omni-deposit-amount{
  position: absolute;
  border: 1px solid #AAA;
  border-radius: 4px;
  top: 101px;
  left: 105px;
  width: 44px;
  height: 22px;
  z-index: 21;
}
input[type="number"]:disabled {
  opacity: 0;
}
.withdraw-amount,
.omni-withdraw-amount{
  position: absolute;
  border: 1px solid #AAA;
  border-radius: 4px;
  top: 101px;
  left: 393px;
  width: 40px;
  height: 22px;
  z-index: 21;
}
.omni-deposit-amount { 
  top: 114px;
  left: 105px;
}
.omni-withdraw-amount {  
  top: 114px;
  left: 374px;
}
.deposit-button-label {
  position: absolute;
  top: 5px;
  margin-left: -5%;
}
div[data-descr] {
  position: relative;
}
div[data-descr]:hover::after {
  content: attr(data-descr);
  position: absolute;
  left: -7px;
  top: 25px;
  min-width: 33px;
  border: 1px #aaaaaa solid;
  border-radius: 10px;
  background-color: #50C9BD;
  padding: 12px;
  color: #000000;
  font-size: 14px;
  z-index: 21;
}
div[data-tvl] {
  position: absolute;
}
div[data-tvl]:hover::after {
  content: attr(data-tvl);
  position: absolute;
  left: -20px;
  top: 15px;
  min-width: 30px;
  border: 1px #aaaaaa solid;
  border-radius: 10px;
  background-color: #50C9BD;
  padding: 12px;
  color: #000000;
  font-size: 14px;
  z-index: 21;
}
p[data-descr] {
  position: relative;
}
p[data-descr]:hover::after {
  content: attr(data-descr);
  position: absolute;
  left: 3px;
  top: 25px;
  min-width: 90px;
  border: 1px #aaaaaa solid;
  border-radius: 10px;
  background-color: #ffffcc;
  padding: 12px;
  color: #000000;
  font-size: 14px;
  z-index: 21;
}
/* ... */

